force-app/main/default/objects/Account/fields/Booking_Category__c.field-meta.xml
<CustomField>
    <fullName>Booking_Category__c</fullName>
    <label>Booking Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Hotel</fullName><default>false</default><label>Hotel</label></value>
            <value><fullName>Flight</fullName><default>false</default><label>Flight</label></value>
            <value><fullName>Bus</fullName><default>false</default><label>Bus</label></value>
            <value><fullName>Cinema</fullName><default>false</default><label>Cinema</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>