force-app/main/default/objects/Account/fields/Booking_Details__c.field-meta.xml
<CustomField>
    <fullName>Booking_Details__c</fullName>
    <label>Booking Details</label>
    <type>TextArea</type>
</CustomField>