force-app/main/default/objects/Account/fields/Booking_Price__c.field-meta.xml
<CustomField>
    <fullName>Booking_Price__c</fullName>
    <label>Booking Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>